Kubernetes/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: recipe-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - shreeda-training.com
    secretName: recipe-tls
  rules:
  - host: shreeda-training.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: recipe-app
            port: 
              number: 8000
